Fixed sidebar clickability

--- a/src/index.html
+++ b/src/index.html
@@ -15,114 +15,114 @@
         <div class="header__title">HTML Glossary</div>
         <div class="header__tag-list">
             <ul>
-                <li>&lt;!-- ... --&gt;</li>
-                <li>&lt;!DOCTYPE&gt;</li>
-                <li>&lt;a&gt;</li>
-                <li>&lt;abbr&gt;</li>
-                <li>&lt;address&gt;</li>
-                <li>&lt;area&gt;</li>
-                <li>&lt;article&gt;</li>
-                <li>&lt;aside&gt;</li>
-                <li>&lt;audio&gt;</li>
-                <li>&lt;b&gt;</li>
-                <li>&lt;base&gt;</li>
-                <li>&lt;bdi&gt;</li>
-                <li>&lt;bdo&gt;</li>
-                <li>&lt;blockquote&gt;</li>
-                <li>&lt;body&gt;</li>
-                <li>&lt;br&gt;</li>
-                <li>&lt;button&gt;</li>
-                <li>&lt;canvas&gt;</li>
-                <li>&lt;caption&gt;</li>
-                <li>&lt;center&gt;</li>
-                <li>&lt;cite&gt;</li>
-                <li>&lt;code&gt;</li>
-                <li>&lt;col&gt;</li>
-                <li>&lt;colgroup&gt;</li>
-                <li>&lt;data&gt;</li>
-                <li>&lt;datalist&gt;</li>
-                <li>&lt;dd&gt;</li>
-                <li>&lt;del&gt;</li>
-                <li>&lt;details&gt;</li>
-                <li>&lt;dfn&gt;</li>
-                <li>&lt;dialog&gt;</li>
-                <li>&lt;div&gt;</li>
-                <li>&lt;dl&gt;</li>
-                <li>&lt;dl&gt;</li>
-                <li>&lt;dt&gt;</li>
-                <li>&lt;em&gt;</li>
-                <li>&lt;embed&gt;</li>
-                <li>&lt;fieldset&gt;</li>
-                <li>&lt;figcaption&gt;</li>
-                <li>&lt;figure&gt;</li>
-                <li>&lt;footer&gt;</li>
-                <li>&lt;form&gt;</li>
-                <li>&lt;h1&gt; al &lt;h6&gt;</li>
-                <li>&lt;head&gt;</li>
-                <li>&lt;header&gt;</li>
-                <li>&lt;hr&gt;</li>
-                <li>&lt;html&gt;</li>
-                <li>&lt;i&gt;</li>
-                <li>&lt;iframe&gt;</li>
-                <li>&lt;img&gt;</li>
-                <li>&lt;input&gt;</li>
-                <li>&lt;ins&gt;</li>
-                <li>&lt;kbd&gt;</li>
-                <li>&lt;label&gt;</li>
-                <li>&lt;legend&gt;</li>
-                <li>&lt;li&gt;</li>
-                <li>&lt;link&gt;</li>
-                <li>&lt;main&gt;</li>
-                <li>&lt;mark&gt;</li>
-                <li>&lt;meta&gt;</li>
-                <li>&lt;meter&gt;</li>
-                <li>&lt;nav&gt;</li>
-                <li>&lt;noscript&gt;</li>
-                <li>&lt;object&gt;</li>
-                <li>&lt;ol&gt;</li>
-                <li>&lt;optgroup&gt;</li>
-                <li>&lt;option&gt;</li>
-                <li>&lt;output&gt;</li>
-                <li>&lt;p&gt;</li>
-                <li>&lt;param&gt;</li>
-                <li>&lt;pre&gt;</li>
-                <li>&lt;progress&gt;</li>
-                <li>&lt;q&gt;</li>
-                <li>&lt;rp&gt;</li>
-                <li>&lt;rt&gt;</li>
-                <li>&lt;ruby&gt;</li>
-                <li>&lt;s&gt;</li>
-                <li>&lt;samp&gt;</li>
-                <li>&lt;script&gt;</li>
-                <li>&lt;section&gt;</li>
-                <li>&lt;select&gt;</li>
-                <li>&lt;small&gt;</li>
-                <li>&lt;source&gt;</li>
-                <li>&lt;span&gt;</li>
-                <li>&lt;strong&gt;</li>
-                <li>&lt;style&gt;</li>
-                <li>&lt;sub&gt;</li>
-                <li>&lt;summary&gt;</li>
-                <li>&lt;sup&gt;</li>
-                <li>&lt;svg&gt;</li>
-                <li>&lt;table&gt;</li>
-                <li>&lt;tbody&gt;</li>
-                <li>&lt;td&gt;</li>
-                <li>&lt;td&gt;</li>
-                <li>&lt;template&gt;</li>
-                <li>&lt;textarea&gt;</li>
-                <li>&lt;tfoot&gt;</li>
-                <li>&lt;th&gt;</li>
-                <li>&lt;thead&gt;</li>
-                <li>&lt;time&gt;</li>
-                <li>&lt;title&gt;</li>
-                <li>&lt;tr&gt;</li>
-                <li>&lt;track&gt;</li>
-                <li>&lt;u&gt;</li>
-                <li>&lt;ul&gt;</li>
-                <li>&lt;var&gt;</li>
-                <li>&lt;video&gt;</li>
-                <li>&lt;wbr&gt;</li>
+                <a href="#comment"><li>&lt;!-- ... --&gt;</li></a>
+                <a href="#comment"><li>&lt;!-- ... --&gt;</li></a>
+                <a href="#doctype"><li>&lt;!DOCTYPE&gt;</li></a>
+                <a href="#a"><li>&lt;a&gt;</li></a>
+                <a href="#abbr"><li>&lt;abbr&gt;</li></a>
+                <a href="#address"><li>&lt;address&gt;</li></a>
+                <a href="#area"><li>&lt;area&gt;</li></a>
+                <a href="#article"><li>&lt;article&gt;</li></a>
+                <a href="#aside"><li>&lt;aside&gt;</li></a>
+                <a href="#audio"><li>&lt;audio&gt;</li></a>
+                <a href="#b"><li>&lt;b&gt;</li></a>
+                <a href="#base"><li>&lt;base&gt;</li></a>
+                <a href="#bdi"><li>&lt;bdi&gt;</li></a>
+                <a href="#bdo"><li>&lt;bdo&gt;</li></a>
+                <a href="#blockquote"><li>&lt;blockquote&gt;</li></a>
+                <a href="#body"><li>&lt;body&gt;</li></a>
+                <a href="#br"><li>&lt;br&gt;</li></a>
+                <a href="#button"><li>&lt;button&gt;</li></a>
+                <a href="#canvas"><li>&lt;canvas&gt;</li></a>
+                <a href="#caption"><li>&lt;caption&gt;</li></a>
+                <a href="#center"><li>&lt;center&gt;</li></a>
+                <a href="#cite"><li>&lt;cite&gt;</li></a>
+                <a href="#code"><li>&lt;code&gt;</li></a>
+                <a href="#col"><li>&lt;col&gt;</li></a>
+                <a href="#colgroup"><li>&lt;colgroup&gt;</li></a>
+                <a href="#data"><li>&lt;data&gt;</li></a>
+                <a href="#datalist"><li>&lt;datalist&gt;</li></a>
+                <a href="#dd"><li>&lt;dd&gt;</li></a>
+                <a href="#del"><li>&lt;del&gt;</li></a>
+                <a href="#details"><li>&lt;details&gt;</li></a>
+                <a href="#dfn"><li>&lt;dfn&gt;</li></a>
+                <a href="#dialog"><li>&lt;dialog&gt;</li></a>
+                <a href="#div"><li>&lt;div&gt;</li></a>
+                <a href="#dl"><li>&lt;dl&gt;</li></a>
+                <a href="#dt"><li>&lt;dt&gt;</li></a>
+                <a href="#em"><li>&lt;em&gt;</li></a>
+                <a href="#embed"><li>&lt;embed&gt;</li></a>
+                <a href="#fieldset"><li>&lt;fieldset&gt;</li></a>
+                <a href="#figcaption"><li>&lt;figcaption&gt;</li></a>
+                <a href="#figure"><li>&lt;figure&gt;</li></a>
+                <a href="#footer"><li>&lt;footer&gt;</li></a>
+                <a href="#form"><li>&lt;form&gt;</li></a>
+                <a href="#headings"><li>&lt;h1&gt; al &lt;h6&gt;</li></a>
+                <a href="#head"><li>&lt;head&gt;</li></a>
+                <a href="#header"><li>&lt;header&gt;</li></a>
+                <a href="#hr"><li>&lt;hr&gt;</li></a>
+                <a href="#html"><li>&lt;html&gt;</li></a>
+                <a href="#i"><li>&lt;i&gt;</li></a>
+                <a href="#iframe"><li>&lt;iframe&gt;</li></a>
+                <a href="#img"><li>&lt;img&gt;</li></a>
+                <a href="#input"><li>&lt;input&gt;</li></a>
+                <a href="#ins"><li>&lt;ins&gt;</li></a>
+                <a href="#kbd"><li>&lt;kbd&gt;</li></a>
+                <a href="#label"><li>&lt;label&gt;</li></a>
+                <a href="#legend"><li>&lt;legend&gt;</li></a>
+                <a href="#li"><li>&lt;li&gt;</li></a>
+                <a href="#link"><li>&lt;link&gt;</li></a>
+                <a href="#main"><li>&lt;main&gt;</li></a>
+                <a href="#mark"><li>&lt;mark&gt;</li></a>
+                <a href="#meta"><li>&lt;meta&gt;</li></a>
+                <a href="#meter"><li>&lt;meter&gt;</li></a>
+                <a href="#nav"><li>&lt;nav&gt;</li></a>
+                <a href="#noscript"><li>&lt;noscript&gt;</li></a>
+                <a href="#object"><li>&lt;object&gt;</li></a>
+                <a href="#ol"><li>&lt;ol&gt;</li></a>
+                <a href="#optgroup"><li>&lt;optgroup&gt;</li></a>
+                <a href="#option"><li>&lt;option&gt;</li></a>
+                <a href="#output"><li>&lt;output&gt;</li></a>
+                <a href="#p"><li>&lt;p&gt;</li></a>
+                <a href="#param"><li>&lt;param&gt;</li></a>
+                <a href="#pre"><li>&lt;pre&gt;</li></a>
+                <a href="#progress"><li>&lt;progress&gt;</li></a>
+                <a href="#q"><li>&lt;q&gt;</li></a>
+                <a href="#rp"><li>&lt;rp&gt;</li></a>
+                <a href="#rt"><li>&lt;rt&gt;</li></a>
+                <a href="#ruby"><li>&lt;ruby&gt;</li></a>
+                <a href="#s"><li>&lt;s&gt;</li></a>
+                <a href="#samp"><li>&lt;samp&gt;</li></a>
+                <a href="#script"><li>&lt;script&gt;</li></a>
+                <a href="#section"><li>&lt;section&gt;</li></a>
+                <a href="#select"><li>&lt;select&gt;</li></a>
+                <a href="#small"><li>&lt;small&gt;</li></a>
+                <a href="#source"><li>&lt;source&gt;</li></a>
+                <a href="#span"><li>&lt;span&gt;</li></a>
+                <a href="#strong"><li>&lt;strong&gt;</li></a>
+                <a href="#style"><li>&lt;style&gt;</li></a>
+                <a href="#sub"><li>&lt;sub&gt;</li></a>
+                <a href="#summary"><li>&lt;summary&gt;</li></a>
+                <a href="#sup"><li>&lt;sup&gt;</li></a>
+                <a href="#svg"><li>&lt;svg&gt;</li></a>
+                <a href="#table"><li>&lt;table&gt;</li></a>
+                <a href="#tbody"><li>&lt;tbody&gt;</li></a>
+                <a href="#td"><li>&lt;td&gt;</li></a>
+                <a href="#td"><li>&lt;td&gt;</li></a>
+                <a href="#template"><li>&lt;template&gt;</li></a>
+                <a href="#textarea"><li>&lt;textarea&gt;</li></a>
+                <a href="#tfoot"><li>&lt;tfoot&gt;</li></a>
+                <a href="#th"><li>&lt;th&gt;</li></a>
+                <a href="#thead"><li>&lt;thead&gt;</li></a>
+                <a href="#time"><li>&lt;time&gt;</li></a>
+                <a href="#title"><li>&lt;title&gt;</li></a>
+                <a href="#tr"><li>&lt;tr&gt;</li></a>
+                <a href="#track"><li>&lt;track&gt;</li></a>
+                <a href="#u"><li>&lt;u&gt;</li></a>
+                <a href="#ul"><li>&lt;ul&gt;</li></a>
+                <a href="#var"><li>&lt;var&gt;</li></a>
+                <a href="#video"><li>&lt;video&gt;</li></a>
+                <a href="#wbr"><li>&lt;wbr&gt;</li></a>
             </ul>
         </div>
     </header>
