Added and styled .container__header

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css">
@@ -127,8 +127,14 @@
     </header>
     <main>
         <div class="container">
+            <div class="container__header">
+                <span class="twitter"><i class="fab fa-twitter"></i> <a href="http://twitter.com/codigosalen">Twitter</a></span>
+                <span class="github"><i class="fab fa-github"></i> <a href="https://github.com/jsalen">GitHub</a></span>
+                <span class="linkedin"><i class="fab fa-linkedin-in"></i> <a href="www.linkedin.com/in/codigosalen">LinkedIn</a></span>
+                <p>Desarrollador: Joseph M. Salen P.</p>
+            </div>
             <div class="container__title">
-                <h1>HTML Glossary - Joseph Salen</h1>
+                <h1>HTML Glossary</h1>
             </div>
             <section class="container__glossary">
                 <table>
